--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,10 +23,6 @@ a{
    align-items: center;
 }
 
-#logo-img{
-	height: 100px;
-	margin-left: 40px;
-}
 
 #logo{
 	font-family: 'Permanent Marker', cursive;
@@ -117,3 +113,119 @@ a{
 	color: rgb(0,170,210);
 }
 
+@media screen and (max-width: 500px){
+	body{
+		background-size: auto;
+	}
+
+	#logo, .fa-bars{
+		font-size: 25px;
+		border: none;
+		padding: 20px;
+	}
+
+	.fa-bars{padding: 0; margin: 20px;}
+
+	#web-text{
+		font-size: 50px;
+	}
+
+	#bttns{
+		flex-wrap: wrap;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin: 40px;
+	}
+
+	.bttn{
+		font-size: 20px;
+		margin:10px;
+		padding: 12px 15px;
+		text-align: center;
+		border: 3px solid #fff;
+		width: 60vw;
+	}
+
+}
+
+
+@media screen and (max-width: 1300px){
+	body{
+		background-size: auto;
+	}
+
+	#logo, .fa-bars,.fa-times{
+		font-size: 45px;
+		border: none;
+		padding: 20px;
+	}
+
+	.fa-bars, .fa-times{padding: 0; margin: 20px;}
+
+
+	#web-text{
+		font-size: 70px;
+	}
+
+	#bttns{
+		flex-wrap: wrap;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin: 40px;
+	}
+
+	.bttn{
+		font-size: 20px;
+		margin:10px;
+		padding: 12px 15px;
+		text-align: center;
+		border: 3px solid #fff;
+		width: 60vw;
+	}
+
+}
+
+
+@media screen and (max-width: 800px){
+	body{
+		background-size: auto;
+	}
+
+	#logo, .fa-bars,.fa-times{
+		font-size: 25px;
+		border: none;
+		padding: 20px;
+	}
+
+	.fa-bars, .fa-times{padding: 0; margin: 20px;}
+
+
+	#menu div{
+		font-size: 3.5vw;
+		padding: 1.5vw;
+	}
+
+	#web-text{
+		font-size: 50px;
+	}
+
+	#bttns{
+		flex-wrap: wrap;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin: 40px;
+	}
+
+	.bttn{
+		font-size: 20px;
+		margin:10px;
+		padding: 12px 15px;
+		text-align: center;
+		border: 3px solid #fff;
+		width: 60vw;
+	}
+
+}
