--- a/CSS/login.css
+++ b/CSS/login.css
@@ -56,6 +56,74 @@ button{
 	background-color: rgb(0,170,210);
 }
 
+@media screen and (max-width: 1200px){
+	
+
+	#web-text{
+		font-size: 70px;
+	}
+
+	form{
+		width: 80vw;
+		padding: 25px 20px;
+	}
+
+	label{
+		font-size: 18px;
+	}
+
+
+    input[type=text], input[type=password]{
+	padding: 8px 10px;
+	width:250px;
+}
+
+.bttn{
+		font-size: 20px;
+		margin:10px;
+		padding: 12px 15px;
+		text-align: center;
+		border: 3px solid #fff;
+		width: 150px;
+	}
+
+
+}
+
+
+@media screen and (max-width: 800px){
+	
+
+	#web-text{
+		font-size: 50px;
+	}
+
+	form{
+		width: 80vw;
+		padding: 25px 20px;
+	}
+
+	label{
+		font-size: 18px;
+	}
+
+
+    input[type=text], input[type=password]{
+	padding: 8px 10px;
+	width:250px;
+}
+
+.bttn{
+		font-size: 20px;
+		margin:10px;
+		padding: 12px 15px;
+		text-align: center;
+		border: 3px solid #fff;
+		width: 150px;
+	}
+
+
+}
 
 
 
