--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -73,7 +73,7 @@ button{
 	background-color: orange;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1300px){
 	
 
 	#web-text{
@@ -85,10 +85,24 @@ button{
 		flex-direction: column;
 	}
 
+	#containers{
+		display: flex;
+		flex-direction: column;
+	}
+
+	.cont{
+		margin: 0;
+	}
+
+	input[type=email] {
+      width: 250px;
+	}
+
 	form{
 
 		width: 80vw;
 		padding: 25px 20px;
+		margin: auto;
 	}
 
 	label{
